--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackathon-timed-auction2",
+  "name": "hackathon-timed-auction",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.1.8"
   }
 }
